--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Legacy Donation</title>
   <base href="/Donations/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="bg-gray-50">
   <app-root></app-root>
